--- a/_posts/2018-03-05-postt.md
+++ b/_posts/2018-03-05-postt.md
@@ -10,9 +10,9 @@ author: "Zem"
 
 
 
-### ——从动物到上帝
+ ——从动物到上帝
 
-#### 尤瓦尔·赫拉利
+ 尤瓦尔·赫拉利
 
 用了将近三周的时间，终于是看完了这本《人类简史》。怎么描述这本书呢？四个字：角度刁钻。作者抛开人类的主观视角，站在描述一个物种的角度，极其客观地向读者描述了人类从史前与动物无异演化到了现在马上可以改造自身的“上帝”的过程，将一段历史以极其刁钻的方式讲了出来。先不说作者文中许多的结论对不对，单凭作者能够想到这么多惊世骇俗的观点就可以说这是一本好书。最起码能让人了解，引起读者的思考不是吗？
 
