--- a/_posts/2018-11-2-test.md
+++ b/_posts/2018-11-2-test.md
@@ -2,7 +2,7 @@
 
 layout: post
 
-title: "最近一段时间的想法"
+title: "test"
 
 author: "Zem"
 
@@ -14,10 +14,8 @@ author: "Zem"
 
 [^ _ ^]: asdasdasd
 
-[^_^]: 
-```c
-dasdasd
-```
+[^_^]: <> (alsdjlasdjlas
+aklsdjlasdjlasdjl)
 
 
 [//]: <> "asdads"
