--- a/_posts/2019-1-16-lost.md
+++ b/_posts/2019-1-16-lost.md
@@ -8,7 +8,7 @@ author: "Zem"
 
 ---
 
-＜！－－大概是从前几周看那本攻防宝典的时候开始的吧，我愈发频繁的拿起手机又放下，拿起又放下……几乎到了疯狂的地步。这种孤独以前也有，但是无伤大雅，但是我发现事情已经逐渐开始失控了。
+<!--大概是从前几周看那本攻防宝典的时候开始的吧，我愈发频繁的拿起手机又放下，拿起又放下……几乎到了疯狂的地步。这种孤独以前也有，但是无伤大雅，但是我发现事情已经逐渐开始失控了。
 
 自认为敏感，所以会斤斤计较，患得患失。然后情绪开始低落，开始满脑子想，然后抽根烟，听歌的时候觉得每句歌词都在说自己。
 
@@ -16,21 +16,21 @@ author: "Zem"
 
 14号晚上，回到于鹏家里，我还是在想。突然一瞬间想去见她，于是微信上问她在哪。过了会她说在单位。我又突然觉得，在没想通之前，哪怕冲动地见了一面，仍旧是于事无补。只会给她添堵。我又不是她的谁，我哪里来的资格耽误她的时间。于是作罢。
 
-到了第二天早上醒来，我算是明白了。我因为自己当前的处境，因为满脑子的她，因为害怕，所以丧失了理智，所以迷失了。－－＞
+到了第二天早上醒来，我算是明白了。我因为自己当前的处境，因为满脑子的她，因为害怕，所以丧失了理智，所以迷失了。-->
 
 ## 因为害怕
 
-＜！－－从一开始的时候，我脑子里就有种想法：我承受不了失去她的代价。很多话一旦说出口很多窗户纸一旦捅破就没有回头的路了。我明白俩人之间巨大的鸿沟，从一开始我就明白。所以我如履薄冰。我真的不敢想象如果我失去一个这样的人以后会怎样。
+<!--从一开始的时候，我脑子里就有种想法：我承受不了失去她的代价。很多话一旦说出口很多窗户纸一旦捅破就没有回头的路了。我明白俩人之间巨大的鸿沟，从一开始我就明白。所以我如履薄冰。我真的不敢想象如果我失去一个这样的人以后会怎样。
 
 正是因为这份害怕所以我是真的怂。患得患失，因为这份顾及。
 
-但是同样像我这样的人怎么会甘心。但是又能怎样呢？嗯？－－＞
+但是同样像我这样的人怎么会甘心。但是又能怎样呢？嗯？-->
 
 ## 找回自己吧。
 
-＜！－－我不会因为自己受了折磨，就要求对方一定要给我回报，而她也肯定不愿意仅仅是因为感动和我在一起，这样迷失自我的人不值得和她在一起。
+<!--我不会因为自己受了折磨，就要求对方一定要给我回报，而她也肯定不愿意仅仅是因为感动和我在一起，这样迷失自我的人不值得和她在一起。
 
-我想通了。先找回自己吧。就像人人都懂的大道理上说的那样，先学会了爱自己，才能有爱别人的能力和权利。卑微和满腔的感情不值一文。她也不会希望我做个迷失在她身上的人的。－－＞
+我想通了。先找回自己吧。就像人人都懂的大道理上说的那样，先学会了爱自己，才能有爱别人的能力和权利。卑微和满腔的感情不值一文。她也不会希望我做个迷失在她身上的人的。-->
 
 等这几天的闲事忙完，一个人去外边走走吧。就像你跑步的时候说的那样，五公里想不通的事，如果十公里也想不通的话，一直走总会想通的。
 
